# findPrimes_multiThread

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build-debug.yml  cmake-build-release.yml  cmake.yml
src/: argInput.cpp  argInput.h  main.cpp  main.h  monoThread.cpp  monoThread.h  multiThread.cpp  multiThread.h  preSieve.cpp  preSieve.h  sievePrimes.cpp  sievePrimes.h  singleThread.cpp  utilities.cpp  utilities.h
src/bits/: stdc++.h
src/includes/: argInput.h  main.h  monoThread.h  multiThread.h  preSieve.h  segSieveMethods.h  sieveMethods.h  sievePrimes.h  singleThread.h  utilities.h
src/sieves/: preSieveMethods.cpp  segSieveMethods.cpp  sieveMethods.cpp  sieveMethods.h
